src/test/resources/fail/simple/B.scala
package fail.simple

class B {
  val a: A = null
}
